#################################################
#
#  (C) 2012 Golubev Alexander
#  fatzer2 (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

add_subdirectory( src )
add_subdirectory( icons )
add_subdirectory( mimetypes )

# FIXME: build api documentation
# add_subdirectory( doc )

